--- a/package.json
+++ b/package.json
@@ -5,5 +5,9 @@
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-less": "~0.9.0",
     "grunt-html2js": "~0.2.4"
+  },
+  "dependencies": {
+    "connect": "~2.12.0",
+    "send": "~0.1.4"
   }
 }
