--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
     "grunt-contrib-watch": "~0.5.3",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-less": "~0.9.0",
-    "grunt-html2js": "~0.2.4"
+    "grunt-html2js": "~0.2.4",
+    "grunt-express-server": "~0.4.11",
+    "grunt-ngmin": "0.0.3",
+    "grunt-contrib-uglify": "~0.3.2"
   },
   "dependencies": {
     "connect": "~2.12.0",
